# CAJAL

./: .gitignore  CAJAL_9B_MODEL_CARD.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  INTEGRATIONS.md  INTEGRATIONS_HUB.md  INTEGRATION_GUIDE.md  MODEL_CARD.md  Modelfile  OUTREACH_EMAIL_TEMPLATE.md  PR_TEMPLATE.md  README.ja.md  README.md  README.ru.md  README.zh.md  README_JA.md  README_RU.md  README_ZH.md  ROADMAP.md  SECURITY.md  build.sh  cajal_9b_system_prompt.txt  cajal_dataset.meta.json  cajal_system_prompt.txt  check_model.py  docker-compose.yml  install_wsl2.bat  merge_and_test.py  ollama-modelfile  paper_arxiv.md  plan.md  plan_cajal.md  publish-npm.sh  publish-openvsx.sh  pyproject.toml  pyproject.toml.new  railway_query.json  resume_training.bat  (+13 more)
.github/ISSUE_TEMPLATE/: bug_report.md  integration_request.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  update-hub.yml
benchmarks/: q8_state_v7.json  q8_state_v8.json
blog-posts/: 2026-05-02_cajal-poetas.html
cajal_p2pclaw/: __init__.py  chat.py  cli.py  model.py  server.py
cajal_p2pclaw/integrations/: README.md
datasets/: cajal_9b_agent_dataset.jsonl  cajal_9b_enhanced_dataset.jsonl  dataset_statistics.json  p2pclaw_train_reasoning_qwen3.jsonl  p2pclaw_train_tooluse_qwen3.jsonl  pipeline_metadata.json  railway_agent_manifest.json  railway_bounties.json  railway_briefing.txt  railway_constitution.txt  railway_latest_papers.json  railway_swarm_status.json
docker/: docker-compose.yml
docs/: SOCIAL_MEDIA_PACK.md  TARGETS.md  landing-page.html  llamacpp-example.md
ecosystem/: README.md  setup-test.py
ecosystem/api-bridge/: bridge.py
ecosystem/browser-extension/: README.md  background.js  content.css  content.js  manifest.json  options.html  popup.html  popup.js
ecosystem/cli/: cajal.py
ecosystem/installer/: install.ps1  install.sh
ecosystem/integrations/: README.md  aider.md  antigraviti.md  anythingllm.md  chatbox.md  chatgpt-custom.md  claude-desktop.md  codex-cli.md  continue.dev.md  cursor-advanced.md  cursor.md  hermes.md  jan.md  kilocode.md  koboldcpp.md  lmstudio-plugin.md  lmstudio.md  lobechat.md  ollama.md  openclaw.md  opencode.md  openrouter.md  supermaven.md  text-generation-webui.md  windsurf-advanced.md  windsurf.md  zed.md
ecosystem/pinokio/: README.md  pinokio.json
ecosystem/vscode-extension/: .vscodeignore  README.md  extension.js  package.json
ecosystem/webapp/: app.js  index.html  styles.css
extensions/chrome/: background.js  content.js  manifest.json  popup.html  popup.js
extensions/npm/: README.md  package-lock.json  package.json
extensions/vscode/: package-lock.json  package.json  tsconfig.json
integration-kits/: PKGBUILD  chainlit-app.py  com.agnuxo1.Cajal.yml  continue-dev-config.yaml  docker-compose.yml  fastapi-extension.py  github-action.yml  gradio-demo.py  homebrew-formula.rb  jupyter-kernel.py  langchain-example.py  manubot-integration.md  nix-package.nix  obsidian-manifest.json  ollama-integration.sh  quarto-template.qmd  snapcraft.yaml  streamlit-app.py  vscode-settings.json  zotero-translator.js
integrations/autogen/: client.py
integrations/chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
integrations/continue_dev/: README.md  config.yaml
integrations/crewai/: llm.py
integrations/docker/: docker-compose.yml
integrations/github_actions/: cajal-paper.yml
integrations/jan/: model.json
integrations/langchain/: llm.py
legal/: GUIA_LEGAL.md  MODEL_CARD_TEMPLATE.md  NOTICE
open-webui/: cajal_tool.py
optimizers/: generate_benchmark_charts.py  publish_manual.py  q8_0_optimizer_v8b.py  run_autonomous.py  test_v8.py
papers/: cajal_7.1_paper.md  cajal_8.2_paper.md
pinokio/: launcher.json
pypi-package/: LICENSE  MANIFEST.in  README.md  pyproject.toml
pypi-package/src/cajal/: __init__.py  cli.py  client.py  config.py
scripts/: GITHUB_TRAFFIC_MONITOR.sh  PR_MONITOR.sh  agent_config.yaml  build-pypi.bat  build_cajal_9b_dataset.py  build_cajal_9b_enhanced_dataset.py  build_cajal_dataset.py  build_mega_dataset.py  cajal-setup.py  convert_p2pclaw_to_training.py  convert_to_gguf.sh  deploy_local_server.py  download_from_api.py  download_repos_for_cajal.py  export_to_gguf.py  find_p2pclaw_dataset.ps1  generate_icons.py  merge_cajal_9b.py  p2pclaw_agent_connector.py  package-vscode.bat  package-vscode.sh  publish-pypi.sh  publish_to_huggingface.py  requirements.txt  run_silicon_agent.py  run_training.sh  setup_ollama.ps1  setup_ollama.sh  submit-to-targets.sh  test_p2pclaw_connection.py  train.bat  train.sh  train_cajal.py  train_cajal_4b.py  train_cajal_9b.py  train_cajal_unsloth.py  verify_cajal_branding.py
training_configs/: adapter_config.json  merged_config.json  training_info.json
(+41 files in other folders)
